tests/errors/syn_method31.java
public class syn_method31 {
public void main ( ) {
 
}
}